# 3DEditor

./: .gitignore  .gitmodules  CMakeLists.txt  Forged_log.txt  NodeGraphConfig.json  README.md
lib/: CMakeLists.txt
lib/ImGuiNodeEditor/: CMakeLists.txt
lib/ImGuizmo/: CMakeLists.txt
lib/ImGuizmo/example/: CMakeLists.txt
lib/di/: .clang-tidy  .gitignore  CMakeLists.txt
lib/imgui/: CMakeLists.txt
lib/implot/: CMakeLists.txt
scripts/: build.sh  generate_project.sh
src/: Application.cpp  Application.h  CMakeLists.txt  Config.h  IManager.h  Manager.cpp  Manager.h  Platform.cpp  Platform.h  Script.cpp  Script.h  Window.cpp  Window.h  common.h  main.cpp
src/Editor/: IControl.h  IUIBuilder.h  IUIControl.h  IUIRenderer.h  MainMenu.cpp  MainMenu.h  MainWindow.cpp  MainWindow.h  MessageConsole.cpp  MessageConsole.h  NodeGraph.cpp  NodeGraph.h  Signals.h  UIEvents.h  UIRenderer.cpp  UIRenderer.h  UserControl.cpp  UserControl.h
src/Editor/controls/ImGui/: MainMenu.cpp  MainMenu.h  MainWindow.cpp  MainWindow.h  MessageConsole.cpp  MessageConsole.h  NodeGraph.cpp  NodeGraph.h  UIBuilder.cpp  UIBuilder.h  UIRenderer.cpp  UIRenderer.h
src/Editor/presenter/: Bindings.h  MainMenu.h  ReactiveProperty.h  TestPresenter.h
src/Editor/view/ImGui/: MainMenu.cpp  MainMenu.h  MainWindow.cpp  MainWindow.h  MessageConsole.cpp  MessageConsole.h  NodeGraph.cpp  UIBuilder.cpp  UIBuilder.h  UIRenderer.cpp  Widgets.h
src/assets/scripts/: main.nut
src/core/: Application.cpp  Application.h  Common.h  Components.h  IApplication.h  ILifecycleEvent.h  IPlatform.h  ISystem.h  Injectors.h  Platform.cpp  Platform.h
src/managers/: IManager.h  ScriptManager.cpp  ScriptManager.h  UIManager.cpp  UIManager.h
src/presenter/: Bindings.h  Command.h  CommandHelper.h  DemoPanel.cpp  DemoPanel.h  Events.h  MainMenu.cpp  MainMenu.h  MainWindow.h  MessagePanel.cpp  MessagePanel.h  PlotDemoPanel.cpp  PlotDemoPanel.h  PresenterBase.cpp  PresenterBase.h  ReactiveCommand.h  ReactiveProperty.h  TestPresenter.h
src/presenter/bindings_WIP/: ReactiveProperty.h
src/presenter/state/: Actions.h  Model.h  Reducers.h  Store.h
src/services/: EventBus.h  EventLoop.cpp  EventLoop.h  IReactiveService.h  IService.h  IServiceLocator.h  IServiceProvider.h  IUIService.h  LogService.cpp  LogService.h  ReactiveService.h  SignalService.cpp  SignalService.h
src/state/: Actions.h  Model.h  Reducers.cpp  Reducers.h  Store.h
src/ui/: AppLog.cpp  AppLog.h
src/utils/: Common.h  Config.h  Types.h
src/view/: IUIBuilder.h  IUIControl.h  IUIRenderer.h  UIControlHash.h  UIEvents.h  UserControl.h
src/view/ImGui/: ImGuiDemo.h  ImGuiPlotDemo.h  MainMenu.cpp  MainMenu.h  MainWindow.cpp  MainWindow.h  MessageConsole.cpp  MessageConsole.h  MessagePanel.cpp  MessagePanel.h  NodeGraph.cpp  NodeGraph.h  UIBuilder.cpp  UIBuilder.h  UIRenderer.cpp  UIRenderer.h  Widgets.h
tests/: CMakeLists.txt  main.cpp  test_store.cpp  test_store2.cpp
